# WeKnora

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
client/: agent.go
cmd/server/: main.go  main_test.go  reuseport_unix.go  reuseport_windows.go
config/: builtin_agents.yaml  config.yaml
config/prompt_templates/: agent_system_prompt.yaml  system_prompt.yaml
docker/: Dockerfile.docreader
docreader/: pyproject.toml
docreader/parser/: base_parser.py  docling_parser.py  registry.py
docs/: BUILTIN_MCP_SERVICES.md  BUILTIN_MODELS.md  Git工作流说明.md  PROJECT.md  README.md  ROADMAP.md  docs.go  improvements-summary.md  proto-conflict-resolution.md  regression-smoke.md  swagger.json  swagger.yaml  上游能力待吸收Backlog.md  共享空间说明.md  开发指南.md
docs/api/: README.md  chat.md  model.md  organization.md  session.md  system.md  tenant.md  web-search.md
docs/superpowers/: README.md
docs/企业内部知识库底座一期/: 01-一期建设方案.md  02-差异分析.md  03-路线图与里程碑.md  04-产品裁剪与页面映射.md  05-任务分解与上线检查.md  06-角色权限矩阵.md  README.md
frontend/: vite.config.ts
frontend/src/: App.vue  main.ts
internal/agent/: act.go  act_test.go  const.go  engine.go  finalize.go  observe.go  prompts.go  think.go
internal/container/: container.go  container_test.go  duckdb_supported.go  duckdb_unsupported.go  sqlitevec_supported.go  sqlitevec_unsupported.go
internal/crypto/: config_crypt.go  config_crypt_test.go
internal/database/: schema_audit.go  schema_audit_test.go
scripts/: fix_missing_migration_000033.sh  qa_mode_smoke.sh  rag_metrics.py  regression_smoke.ps1
(+427 files in other folders)
